<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseFillWidthStyle"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="fragments.SupportFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/appIcon"
                style="@style/BaseWrapContentStyle"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txtAppName"
                style="@style/BaseWrapContentStyle"
                android:layout_below="@+id/appIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/BaseFillWidthStyle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnFeedback"
                    style="@style/BaseFillWidthStyle.ButtonTextView"
                    android:drawableLeft="@drawable/ic_email_24dp"
                    android:text="@string/feed_back" />

                <TextView
                    android:id="@+id/btnShareApp"
                    android:enabled="false"
                    style="@style/BaseFillWidthStyle.ButtonTextView"
                    android:drawableLeft="@drawable/ic_menu_share_black_24dp"
                    android:text="@string/share_app" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</android.support.v7.widget.CardView>
